avoid too much spacing in list items

--- a/webstyle.css
+++ b/webstyle.css
@@ -517,3 +517,7 @@ h1, h2, h3 {
     font-weight: 100;
     color: #6b0001;
 }
+
+li > p {
+    margin-bottom: 0;
+}
